# Lattice-Boltzmann-Solver

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  README.md
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  hello.cmake
examples/: CMakeLists.txt  Channel_case.cpp  Couette.cpp  Couette_case.cpp  Couette_kokkos_case.cpp  D2Q9_LBM_prop.m  DoubleCavity_case.cpp  LBM_example.cpp  LidDrivenCavity_case.cpp  Makefile  compile.sh  compile_gpu.sh  compile_kokkos.sh  compile_openmp.sh  kokkos_implementation.cpp  kokkos_implementation_float.cpp  naive_implementation.cpp  naive_kokkos.cpp  naive_parallel.cpp  prog  test.cpp
examples/archive/: Couette.cpp  D2Q9_LBM_prop.m  naive_implementation.cpp  naive_improved_implementation.cpp  naive_parallel.cpp  prog
include/: BCsKokkos.hpp  BoundaryConditions.hpp  CMakeLists.txt  CollisionKokkos.hpp  Collisions.hpp  ComputeState.hpp  ComputeStateKokkos.hpp  D2Q9Problem.hpp  EquilibriumKokkos.hpp  GridTypes.hpp  LBM.hpp  Streaming.hpp  StreamingKokkos.hpp  VtkWriter.hpp  vtk_writer.hpp
lib/: create_lib.sh
src/: .D2Q9Problem.cpp.swp  BoundaryConditions.cpp  Collisions.cpp  ComputeState.cpp  D2Q9Problem.cpp  Streaming.cpp  VtkWriter.cpp  create_lib.sh  vtk_writer.cpp
tests/: CMakeLists.txt  D2Q9Problem_test.cpp  Kernels_test.cpp  vtk_test.cpp
